--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "socketio-server",
+  "name": "tictactoe-server",
   "version": "1.0.0",
-  "description": "Socket.IO backend server",
+  "description": "Multiplayer Tic Tac Toe WebSocket Server",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "node start.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.4",
-    "cors": "^2.8.5"
+    "uuid": "^9.0.1",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.10"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   }
 }
